[package]
name = "xiq_cli_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
dotenv = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
regex = "1.10"
